--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 * {
   margin: 0;
   padding: 0;
@@ -12,4 +13,522 @@ li {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: pretendard;
+  width: 100%;
+}
+
+main {
+  width: 100%;
+}
+main #main_con1 {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+}
+main #main_con1 .main_inner {
+  width: 1050px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+main #main_con1 .main_inner h1 {
+  font-size: 3rem;
+}
+main #main_con1 .main_inner .main_it {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  margin-bottom: 15px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info {
+  width: 240px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_title {
+  font-size: 1.8rem;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping p {
+  font-size: 2.2rem;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con1 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con1 .main_inner .main_it .main_type2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  position: relative;
+}
+main #main_con1 .main_inner .main_it .main_type2 .img button {
+  background: #f37100;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 240px;
+  height: 80px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info h3 {
+  font-size: 1.8rem;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 10px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent {
+  display: flex;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p {
+  color: #f37100;
+  font-size: 1.8rem;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p b {
+  font-size: 3.6rem;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price {
+  display: flex;
+  flex-direction: column;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price span {
+  color: #ccc;
+  text-decoration: line-through;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price p {
+  font-size: 2.2rem;
+  color: #000;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con1 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+}
+main #main_con2 .main_inner {
+  width: 1050px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+main #main_con2 .main_inner h1 {
+  font-size: 3rem;
+}
+main #main_con2 .main_inner .main_it {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  margin-bottom: 15px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info {
+  width: 240px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_title {
+  font-size: 1.8rem;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping p {
+  font-size: 2.2rem;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 .main_inner .main_it .main_type1 .main_info .main_shopping .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 .main_inner .main_it .main_type2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  position: relative;
+}
+main #main_con2 .main_inner .main_it .main_type2 .img button {
+  background: #f37100;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 240px;
+  height: 80px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info h3 {
+  font-size: 1.8rem;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 10px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent {
+  display: flex;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p {
+  color: #f37100;
+  font-size: 1.8rem;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p b {
+  font-size: 3.6rem;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price {
+  display: flex;
+  flex-direction: column;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price span {
+  color: #ccc;
+  text-decoration: line-through;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price p {
+  font-size: 2.2rem;
+  color: #000;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con2 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con3 {
+  width: 100%;
+  height: 444px;
+  display: flex;
+  justify-content: center;
+  background: #fffaf1;
+}
+main #main_con3 .main_inner {
+  width: 1050px;
+  display: flex;
+}
+main #main_con3 .main_inner .main_title2 .main_title3 {
+  font-size: 3rem;
+}
+main #main_con3 .main_inner .main_title2 .main_title3 b {
+  color: #f37100;
+}
+main #main_con3 .main_inner .main_title2 .line {
+  width: 220px;
+  height: 1px;
+  background-color: #f37100;
+}
+main #main_con3 .main_inner .main_title2 p {
+  margin-top: 15px;
+}
+main #main_con3 .main_inner .main_recipe {
+  display: flex;
+  gap: 30px;
+}
+main #main_con3 .main_inner .main_recipe .main_item {
+  width: 240px;
+  height: 304px;
+  position: relative;
+}
+main #main_con3 .main_inner .main_recipe .main_item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  filter: brightness(70%);
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 120px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_title .fa-heart {
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: right;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_title h4 {
+  font-size: 1.6rem;
+  margin-bottom: 6px;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_title button {
+  border: none;
+  border-radius: 12px;
+  padding: 8px;
+  color: #fff;
+  font-size: 1rem;
+  font-family: pretendard;
+  background: rgba(0, 0, 0, 0.6);
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_text .recipe_line {
+  width: 204px;
+  height: 1px;
+  background-color: #fff;
+}
+main #main_con3 .main_inner .main_recipe .main_item .recipe_info .recipe_text p {
+  font-size: 1.2rem;
+}
+main #main_con4 {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+}
+main #main_con4 .main_inner {
+  width: 1050px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+main #main_con4 .main_inner .line {
+  width: 100%;
+  height: 2px;
+  background-color: #f37100;
+}
+main #main_con4 .main_inner .main_sale_title {
+  display: flex;
+  justify-content: space-between;
+}
+main #main_con4 .main_inner .main_sale_title h1 {
+  font-size: 3rem;
+}
+main #main_con4 .main_inner .main_sale_title .sale_time {
+  color: #fff;
+  background: #f37100;
+  font-size: 1.6rem;
+  border-radius: 10px;
+  padding: 10px 15px;
+}
+main #main_con4 .main_inner .main_it {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+main #main_con4 .main_inner .main_it .main_type2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid #f00;
+  position: relative;
+}
+main #main_con4 .main_inner .main_it .main_type2 .img button {
+  background: #f37100;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 240px;
+  height: 80px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info h3 {
+  font-size: 1.8rem;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 10px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent {
+  display: flex;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p {
+  color: #f37100;
+  font-size: 1.8rem;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_percent p b {
+  font-size: 3.6rem;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price {
+  display: flex;
+  flex-direction: column;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price span {
+  color: #ccc;
+  text-decoration: line-through;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .main_sale .main_price p {
+  font-size: 2.2rem;
+  color: #000;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .icon {
+  display: flex;
+  justify-content: right;
+  gap: 5px;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-heart {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
+}
+main #main_con4 .main_inner .main_it .main_type2 .main_info .main_tag .icon .fa-cart-shopping {
+  border: 1px solid #ffc164;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  color: #ffc164;
 }
