--- a/login/styles/sign.css
+++ b/login/styles/sign.css
@@ -68,6 +68,64 @@ header .header_inner {
   padding: 20px 0;
   position: relative;
 }
+header .header_inner nav {
+  width: 100%;
+  padding: 0 20px;
+}
+header .header_inner nav .gnb {
+  display: none;
+  flex-direction: column;
+  background: #fff;
+  position: fixed;
+  top: 201px;
+  left: 30px;
+  width: 200px;
+  height: 250px;
+  padding: 30px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
+  transition: all 0.3s;
+}
+header .header_inner nav .gnb li > a {
+  font-family: pretendard;
+  font-size: 2rem;
+  color: #000;
+  text-decoration: none;
+  padding: 10px;
+  display: block;
+}
+header .header_inner nav .gnb li > a:hover {
+  color: #ff9900;
+}
+header .header_inner nav .gnb.active {
+  display: flex;
+  right: 0;
+}
+header .header_inner .trigger {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  position: absolute;
+  top: 120px;
+  left: -30px;
+  z-index: 11;
+  cursor: pointer;
+}
+header .header_inner .trigger span {
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+header .header_inner .trigger.active span:nth-child(1) {
+  transform: translateY(9px) rotate(45deg);
+}
+header .header_inner .trigger.active span:nth-child(2) {
+  opacity: 0;
+}
+header .header_inner .trigger.active span:nth-child(3) {
+  transform: translateY(-9px) rotate(-45deg);
+}
 header .header_inner .header_inner_left {
   display: flex;
   justify-content: start;
