--- a/styles/header.scss
+++ b/styles/header.scss
@@ -40,6 +40,75 @@ header {
     justify-content: space-between;
     padding: 20px 0;
     position: relative;
+    // trigger start
+    nav {
+      width: 100%;
+      padding: 0 20px;
+      .gnb {
+        display: none;
+        flex-direction: column;
+        background: #fff;
+        position: fixed;
+        top: 201px;
+        left: 30px;
+        width: 200px;
+        height: 236px;
+        padding: 30px;
+        box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
+        transition: all 0.3s;
+
+        li > a {
+          font-family: map-get($map: $font, $key: pretendard);
+          font-size: 2rem;
+          color: map-get($map: $color, $key: dark);
+          text-decoration: none;
+          padding: 10px;
+          display: block;
+
+          &:hover {
+            color: map-get($map: $color, $key: main-02);
+          }
+        }
+
+        &.active {
+          display: flex;
+          right: 0;
+        }
+      }
+    }
+
+    .trigger {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      position: absolute;
+      top: 120px;
+      left: -30px;
+      z-index: 11;
+      cursor: pointer;
+
+      span {
+        width: 25px;
+        height: 3px;
+        background-color: #333;
+        border-radius: 2px;
+        transition: 0.3s;
+      }
+
+      &.active {
+        span:nth-child(1) {
+          transform: translateY(9px) rotate(45deg);
+        }
+        span:nth-child(2) {
+          opacity: 0;
+        }
+        span:nth-child(3) {
+          transform: translateY(-9px) rotate(-45deg);
+        }
+      }
+    }
+    // trigger end
+
     .header_inner_left {
       display: flex;
       justify-content: start;
