--- a/style.css
+++ b/style.css
@@ -80,9 +80,9 @@ header .header_inner nav .gnb {
   top: 201px;
   left: 30px;
   width: 200px;
-  height: 250px;
+  height: 236px;
   padding: 30px;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
   transition: all 0.3s;
 }
 header .header_inner nav .gnb li > a {
@@ -146,6 +146,9 @@ header .header_inner .header_inner_left ul li {
 }
 header .header_inner .header_inner_left ul li:hover {
   color: #f37100;
+}
+header .header_inner .header_inner_left ul .header_menu_trigger {
+  display: none;
 }
 header .header_inner .header_inner_right {
   display: flex;
@@ -213,7 +216,7 @@ header .header_inner .header_inner_right .inner_right_bottom .basket {
 header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
   width: 40px;
   height: 34px;
-  font-size: 28px;
+  font-size: 2.8rem;
   cursor: pointer;
 }
 header .header_inner .header_inner_right .inner_right_bottom .basket p {
@@ -230,7 +233,7 @@ header .header_inner .header_inner_right .inner_right_bottom .basket p {
   top: -5px;
   right: -5px;
   font-family: pretendard;
-  font-size: 12px;
+  font-size: 1.2rem;
 }
 header .header_inner .header_inner_logo {
   position: absolute;
