--- a/styles/header.css
+++ b/styles/header.css
@@ -65,6 +65,7 @@ header .header_inner {
 header .header_inner nav {
   width: 100%;
   padding: 0 20px;
+  display: none;
 }
 header .header_inner nav .gnb {
   opacity: 0;
