--- a/styles/header.scss
+++ b/styles/header.scss
@@ -17,14 +17,14 @@ header {
   top: 0;
   z-index: 3;
   transition: transform 0.8s ease;
-    &.scroll {
+  &.scroll {
     &::before {
       content: "";
       display: block;
       position: absolute;
       z-index: -1;
       width: 100vw;
-      height:100px;
+      height: 100px;
       backdrop-filter: blur(10px);
     }
   }
@@ -56,6 +56,7 @@ header {
     nav {
       width: 100%;
       padding: 0 20px;
+      display: none;
       .gnb {
         opacity: 0;
         flex-direction: column;
